--- a/index.html
+++ b/index.html
@@ -1,44 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./images/favicon-32x32.png"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Frontend Mentor | Tip calculator app</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Tip calculator app</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-
-  Bill
-
-  Select Tip %
-  5%
-  10%
-  15%
-  25%
-  50%
-  Custom
-
-  Number of People
-
-  Tip Amount
-  / person
-
-  Total
-  / person
-
-  Reset
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+		<style>
+			.attribution {
+				font-size: 11px;
+				text-align: center;
+			}
+			.attribution a {
+				color: hsl(228, 45%, 44%);
+			}
+		</style>
+	</head>
+	<body>
+		<div class="calculator">
+			<div class="calculator-control">
+				<label for="bill">Bill</label>
+				<input type="number" id="bill" name="bill" />
+				<label for="tip">Select Tip %</label>
+				<input type="checkbox" id="5" hidden class="tip-check" /><label
+					class="button"
+					for="5"
+					>5%</label
+				>
+				<input type="checkbox" id="10" hidden class="tip-check" /><label
+					class="button"
+					for="10"
+					>10%</label
+				>
+				<input type="checkbox" id="15" hidden class="tip-check" /><label
+					class="button"
+					for="10"
+					>15%</label
+				>
+				<input type="checkbox" id="25" hidden class="tip-check" /><label
+					class="button"
+					for="25"
+					>25%</label
+				>
+				<input type="checkbox" id="50" hidden class="tip-check" /><label
+					class="button"
+					for="50"
+					>50%</label
+				>
+				<input
+					type="number"
+					id="custom"
+					hidden
+					class="tip-check"
+				/><label class="button" for="custom">Custom</label>
+				<label for="number-of-people">Number of People</label>
+				<input
+					type="number"
+					id="number-of-people"
+					name="number-of-people"
+				/>
+			</div>
+			<div class="calculator-result">
+				<div class="calculator-result__tip-amount">
+					<h1>Tip Amount</h1>
+					<p>/ person</p>
+				</div>
+				<div class="calculator-result__total">
+					<h1>Total</h1>
+					<p>/ person</p>
+				</div>
+				<button>Reset</button>
+			</div>
+		</div>
+		<!-- <div class="attribution">
+            Challenge by
+            <a
+                href="https://www.frontendmentor.io?ref=challenge"
+                target="_blank"
+                >Frontend Mentor</a
+            >. Coded by <a href="#">Your Name Here</a>.
+        </div> -->
+		<script src="app.js"></script>
+	</body>
 </html>
