--- a/index.html
+++ b/index.html
@@ -33,46 +33,57 @@
 	<body>
 		<div class="calculator">
 			<div class="calculator-control">
-				<label for="bill">Bill</label>
-				<input type="number" id="bill" name="bill" />
-				<label for="tip">Select Tip %</label>
-				<input type="checkbox" id="5" hidden class="tip-check" /><label
-					class="button"
-					for="5"
-					>5%</label
-				>
-				<input type="checkbox" id="10" hidden class="tip-check" /><label
-					class="button"
-					for="10"
-					>10%</label
-				>
-				<input type="checkbox" id="15" hidden class="tip-check" /><label
-					class="button"
-					for="10"
-					>15%</label
-				>
-				<input type="checkbox" id="25" hidden class="tip-check" /><label
-					class="button"
-					for="25"
-					>25%</label
-				>
-				<input type="checkbox" id="50" hidden class="tip-check" /><label
-					class="button"
-					for="50"
-					>50%</label
-				>
-				<input
-					type="number"
-					id="custom"
-					hidden
-					class="tip-check"
-				/><label class="button" for="custom">Custom</label>
-				<label for="number-of-people">Number of People</label>
-				<input
-					type="number"
-					id="number-of-people"
-					name="number-of-people"
-				/>
+				<div class="bill">
+					<label for="bill">Bill</label>
+					<input type="number" id="bill" name="bill" />
+				</div>
+				<div class="tips">
+					<label for="tip">Select Tip %</label>
+					<input
+						type="checkbox"
+						id="5"
+						hidden
+						class="tip-check"
+					/><label class="button" for="5">5%</label>
+					<input
+						type="checkbox"
+						id="10"
+						hidden
+						class="tip-check"
+					/><label class="button" for="10">10%</label>
+					<input
+						type="checkbox"
+						id="15"
+						hidden
+						class="tip-check"
+					/><label class="button" for="10">15%</label>
+					<input
+						type="checkbox"
+						id="25"
+						hidden
+						class="tip-check"
+					/><label class="button" for="25">25%</label>
+					<input
+						type="checkbox"
+						id="50"
+						hidden
+						class="tip-check"
+					/><label class="button" for="50">50%</label>
+					<input
+						type="number"
+						id="custom"
+						class="tip-check"
+						placeholder="Custom"
+					/>
+				</div>
+				<div class="people">
+					<label for="number-of-people">Number of People</label>
+					<input
+						type="number"
+						id="number-of-people"
+						name="number-of-people"
+					/>
+				</div>
 			</div>
 			<div class="calculator-result">
 				<div class="calculator-result__tip-amount">
